code/istio/multi-version/consumer-dp-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-dp-v2
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: consumer
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: consumer
        version: v2
    spec:
      containers:
        - name: consumer-ct-v2
          image: catface996/k8s-istio-consumer:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              port: 8080
              path: /act/health
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
