code/istio/multi-version/provider-dp-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-dp-v1
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: provider
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: provider
        version: v1
    spec:
      containers:
        - name: provider-ct-v1
          image: catface996/k8s-istio-provider:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              port: 8080
              path: /act/health
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
