code/istio/multi-version/consumer-vs-bind-gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: consumer-gateway
spec:
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - 'consumer.catface996.com'
  selector:
    istio: ingressgateway
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-vs
spec:
  hosts:
  - "consumer.catface996.com"
  gateways:
  - consumer-gateway
  http:
  ## 默认路由到 cat-svc
  - route:
    - destination:
        host: consumer-svc
