code/istio/multi-version/destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: provider-dr
spec:
  host: provider-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
