code/istio/multi-version/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: provider-vs
spec:
  hosts:
  - "provider-svc"
  http:
  ## v1 路由规则
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: provider-svc
        subset: v1
  ## v2 路由规则
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: provider-svc
        subset: v2
